# mcp-gitlab

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  start_server.sh  test_mcp.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
src/: gitlab_client.py  server.py
src/prompts/: listar_issues_projetos.md
tests/: test_gitlab_client.py
