[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-gitlab-list-issues"
version = "0.1.0"
description = "MCP server for listing GitLab issues with filters"
authors = [{name = "Your Name"}]
dependencies = [
    "mcp>=0.1.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]